add styling to index to complete ui

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
         <title></title>
     </head>
     <body>
+        <div class="container">
+            <form id="cntby">
+                <div class="form-group">
+                    <label for="target">enter the maximum number</label>
+                    <input type="text" id="target">
+                </div>
+                <div class="form-group">
+                    <label for="increment">enter a number to count by</label>
+                    <input type="text" id="increment">
+                </div>
+                <button type="submit" class="btn">count!</button>
+            </form>
+            <div id="result">
+                <h1>There are <span class="length"></span> results</h1>
+                <h3><span class="output"></span></h3>
+            </div>
+
+        </div>
 
     </body>
 </html>
